--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <a  class="logo" href="#"><h2 class="logo__title">black sea</h2></a>
         <nav class="nav__menu">
           <a class="nav__menu--item" href="#">home</a>
-          <a class="nav__menu--item" href="#">about me</a>
-          <a class="nav__menu--item" href="#">portfolio</a>
-          <a class="nav__menu--item" href="#">contact</a>
+          <a class="nav__menu--item" href="#about">about me</a>
+          <a class="nav__menu--item" href="#portfolio">portfolio</a>
+          <a class="nav__menu--item" href="#contact">contact</a>
         </nav>
         <nav class="burger__menu">
           <a class="burger__menu--item" href="#">home</a>
-          <a class="burger__menu--item" href="#">about me</a>
-          <a class="burger__menu--item" href="#">portfolio</a>
-          <a class="burger__menu--item" href="#">contact</a>
+          <a class="burger__menu--item" href="#about">about me</a>
+          <a class="burger__menu--item" href="#portfolio">portfolio</a>
+          <a class="burger__menu--item" href="#contact">contact</a>
         </nav>
       </div>
     </header>
@@ -38,8 +38,62 @@
           <li class="slyder__list--item">.</li>
         </ul>
       </section>
+      <section id="portfolio" class="teach">
+        <h1 class="trach__title">
+          At the same time that we are earnest to explore <br>
+          & learn all things
+        </h1>
+        <div class="teach__text">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+            book.
+          </p>
+          <p>
+            but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+            release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
+        <div class="teach__img">
+          <img class="teach__img-item" src="./img/basket.png" alt="basket">
+          <img class="teach__img-item" src="./img/ear.png" alt="ear">
+          <img class="teach__img-item" src="./img/suitcase.png" alt="suitcase">
+        </div>
+      </section>
+      <section id="about" class="about">
+        <div class="about__us">
+          <div class="us__item--img"></div>
+          <div class="about__us--family">
+            <h2 class="family__item">dhavan</h2>
+            <!-- <span class="family__item--span">&rdquo;</span> -->
+          </div>
+        </div>
+        <div class="about__text">
+          <p class="about__text--item">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+            a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting
+          </p>
+          <p class="about__text--item">
+            , remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+            Ipsum.
+          </p>
+        </div>
+      </section>
+      <section id="contact" class="contact">
+        <form class="contact__form">
+          <input class="contact__form--item" type="text" name="name" placeholder="Name">
+          <input class="contact__form--item" type="email" name="e-mail" placeholder="email address">
+          <textarea class="contact__form--item" name="message" cols="30" rows="10" placeholder="Message"></textarea>
+          <button class="form__btn">&#10004;</button>
+        </form>
+      </section>
     </main>
+    <footer class="footer">
+      <h4 class="footer__copy">Copyright &copy; 2012 Css <a class="footer__copy--link" href="#">Author.com</a></h4>
+    </footer>
   </div>
-
 </body>
 </html>
