--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang='ru'>
+
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>Lesson 5</title>
-<link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
-<link href="./css/style.css" rel='stylesheet'>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <title>Lesson 5</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
+  <link href="./css/style.css" rel='stylesheet'>
 </head>
+
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="container">
-        <a  class="logo" href="#"><h2 class="logo__title">black sea</h2></a>
-        <nav class="nav__menu">
-          <a class="nav__menu--item" href="#">home</a>
-          <a class="nav__menu--item" href="#about">about me</a>
-          <a class="nav__menu--item" href="#portfolio">portfolio</a>
-          <a class="nav__menu--item" href="#contact">contact</a>
-        </nav>
-        <nav class="burger__menu">
-          <a class="burger__menu--item" href="#">home</a>
-          <a class="burger__menu--item" href="#about">about me</a>
-          <a class="burger__menu--item" href="#portfolio">portfolio</a>
-          <a class="burger__menu--item" href="#contact">contact</a>
-        </nav>
-      </div>
+      <a class="logo" href="#">
+        <h2 class="logo__title">black sea</h2>
+      </a>
+      <nav class="nav__menu">
+        <a class="nav__menu--item" href="#">home</a>
+        <a class="nav__menu--item" href="#about">about me</a>
+        <a class="nav__menu--item" href="#portfolio">portfolio</a>
+        <a class="nav__menu--item" href="#contact">contact</a>
+      </nav>
+      <nav class="burger__menu">
+        <a class="burger__menu--item" href="#">home</a>
+        <a class="burger__menu--item" href="#about">about me</a>
+        <a class="burger__menu--item" href="#portfolio">portfolio</a>
+        <a class="burger__menu--item" href="#contact">contact</a>
+      </nav>
     </header>
     <main>
       <section class="slyder">
@@ -45,13 +47,17 @@
         </h1>
         <div class="teach__text">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+            type specimen
             book.
           </p>
           <p>
-            but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-            release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
+            1960s with the
+            release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+            software like
             Aldus PageMaker including versions of Lorem Ipsum.
           </p>
         </div>
@@ -71,13 +77,16 @@
         </div>
         <div class="about__text">
           <p class="about__text--item">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard
             dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
             a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting
           </p>
           <p class="about__text--item">
-            , remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+            , remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+            containing Lorem
+            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+            of Lorem
             Ipsum.
           </p>
         </div>
@@ -96,4 +105,5 @@
     </footer>
   </div>
 </body>
+
 </html>
