--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lesson 5</title>
   <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
   <link href="./css/style.css" rel='stylesheet'>
+  <link href="./css/media.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,22 +30,22 @@
       </nav>
     </header>
     <main>
-      <section class="slyder">
-        <h1 class="slyder__title">we need the tonic of wildness</h1>
-        <button class="slyder__btn">read more</button>
-        <ul class="sluder__list">
-          <li class="slyder__list--item">.</li>
-          <li class="slyder__list--item">.</li>
-          <li class="slyder__list--item">.</li>
-          <li class="slyder__list--item">.</li>
-          <li class="slyder__list--item">.</li>
+      <section class="slider">
+        <h1 class="slider__title">we need the tonic of wildness</h1>
+        <button class="slider__btn">read more</button>
+        <ul class="slider__list">
+          <li class="slider__list--item">.</li>
+          <li class="slider__list--item">.</li>
+          <li class="slider__list--item">.</li>
+          <li class="slider__list--item">.</li>
+          <li class="slider__list--item">.</li>
         </ul>
       </section>
       <section id="portfolio" class="teach">
-        <h1 class="trach__title">
+        <h2 class="trach__title">
           At the same time that we are earnest to explore <br>
           & learn all things
-        </h1>
+        </h2>
         <div class="teach__text">
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -95,8 +96,10 @@
         <form class="contact__form">
           <input class="contact__form--item" type="text" name="name" placeholder="Name">
           <input class="contact__form--item" type="email" name="e-mail" placeholder="email address">
-          <textarea class="contact__form--item" name="message" cols="30" rows="10" placeholder="Message"></textarea>
-          <button class="form__btn">&#10004;</button>
+          <textarea class="contact__form--item" name="message" placeholder="Message"></textarea>
+          <button class="form__btn">
+            <div class="check"></div>
+          </button>
         </form>
       </section>
     </main>
